[project]
name = "comfyui_dados_nodes"
description = "A collection of custom nodes for ComfyUI featuring lightweight AI vision and tagger models (SmolVLM & SmolVLM2, JoyTagger, MiaoshouAI), few simple text processing tools, and wildcard prompt utilities."
version = "0.8.9"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/dadoirie/ComfyUI_Dados_Nodes"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "dadoirie"
DisplayName = "ComfyUI Dados Nodes"
Icon = ""
